--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/native-stack": "^6.8.0",
     "expo": "~46.0.9",
     "expo-camera": "^12.3.0",
+    "expo-fast-image": "^1.1.3",
     "expo-file-system": "^14.1.0",
     "expo-image-crop": "^1.0.4",
     "expo-image-picker": "~13.3.1",
@@ -32,7 +33,8 @@
     "react-native-screens": "~3.15.0",
     "react-native-switch-selector": "^2.2.1",
     "react-native-toast-message": "^2.1.5",
-    "rn-fetch-blob": "^0.12.0"
+    "rn-fetch-blob": "^0.12.0",
+    "yarn": "^1.22.19"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
