--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.17.10",
     "@react-native-community/art": "^1.2.0",
     "@react-native-firebase/app": "^15.4.0",
     "@react-native-firebase/storage": "^15.4.0",
@@ -19,12 +20,14 @@
     "expo-fast-image": "^1.1.3",
     "expo-file-system": "^14.1.0",
     "expo-image-crop": "^1.0.4",
+    "expo-image-manipulator": "^10.4.0",
     "expo-image-picker": "~13.3.1",
     "expo-location": "^14.3.0",
     "expo-status-bar": "~1.4.0",
     "firebase": "^9.9.4",
     "react": "18.0.0",
     "react-native": "0.69.5",
+    "react-native-compressor": "^1.5.2",
     "react-native-fs": "^2.20.0",
     "react-native-image-crop-picker": "^0.38.0",
     "react-native-image-picker": "^4.10.0",
