--- a/package.json
+++ b/package.json
@@ -10,16 +10,11 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.17.10",
-    "@react-native-community/art": "^1.2.0",
-    "@react-native-firebase/app": "^15.4.0",
-    "@react-native-firebase/storage": "^15.4.0",
     "@react-navigation/native": "^6.0.12",
     "@react-navigation/native-stack": "^6.8.0",
     "expo": "~46.0.9",
-    "expo-camera": "^12.3.0",
     "expo-fast-image": "^1.1.3",
     "expo-file-system": "^14.1.0",
-    "expo-image-crop": "^1.0.4",
     "expo-image-manipulator": "^10.4.0",
     "expo-image-picker": "~13.3.1",
     "expo-location": "^14.3.0",
@@ -27,17 +22,10 @@
     "firebase": "^9.9.4",
     "react": "18.0.0",
     "react-native": "0.69.5",
-    "react-native-compressor": "^1.5.2",
-    "react-native-fs": "^2.20.0",
-    "react-native-image-crop-picker": "^0.38.0",
-    "react-native-image-picker": "^4.10.0",
-    "react-native-indicator": "^1.2.2",
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
     "react-native-switch-selector": "^2.2.1",
-    "react-native-toast-message": "^2.1.5",
-    "rn-fetch-blob": "^0.12.0",
-    "yarn": "^1.22.19"
+    "react-native-toast-message": "^2.1.5"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
